--- a/accounts/erd1qqqqqqqqqqqqqpgquc2anstkmlzwn7gek0h4zypnqm9a3x352zvq90app4.json
+++ b/accounts/erd1qqqqqqqqqqqqqpgquc2anstkmlzwn7gek0h4zypnqm9a3x352zvq90app4.json
@@ -6,5 +6,7 @@
         "blog": "https://www.monstersquad.io",
         "twitter": "https://twitter.com/MonsterSquadMVX"
     },
-    "tags": ""
+    "extraTokens": [
+        "MON-58cc32"
+    ]
 }
