--- a/accounts/erd1ezxnz5lywd5zpcnl7x3u74vc60tgjxdnga3s0608gmnx6rsxmwhqudsllw.json
+++ b/accounts/erd1ezxnz5lywd5zpcnl7x3u74vc60tgjxdnga3s0608gmnx6rsxmwhqudsllw.json
@@ -1,5 +1,5 @@
 {
-  "name": "El Pulpo",
+  "name": "El Pulpo 🐙",
   "description": "It's obviously El Pulpo's wallet",
   "social": {
     "website": "https://octools.app",
