--- a/.github/workflows/check-signature.yml
+++ b/.github/workflows/check-signature.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: multiversx/mx-assets-checker@main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           ADMIN_ADDRESS: ${{ secrets.ADMIN_ADDRESS }}
