--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -30,9 +30,12 @@ jobs:
             while (Date.now() < timeout) {
               // Check if all required checks are successful
               allChecksPassed = requiredChecks.every(checkName =>
-                prChecks.check_runs.some(run => run.name === checkName && run.conclusion === 'success')
-                // print status of each check
-                console.log(`${checkName}: ${prChecks.check_runs.find(run => run.name === checkName).conclusion}`)
+                const checkRun = prChecks.check_runs.find(run => run.name === checkName);
+                if (checkRun) {
+                  console.log(`${checkName}: ${checkRun.conclusion}`);
+                  return checkRun.conclusion === 'success';
+                }
+                return false;
               );
 
               if (allChecksPassed) {
