--- a/accounts/erd1qqqqqqqqqqqqqpgqw0tp0z2evzvdgmreavvszfwkncnxnsejtxfql7w9tu.json
+++ b/accounts/erd1qqqqqqqqqqqqqpgqw0tp0z2evzvdgmreavvszfwkncnxnsejtxfql7w9tu.json
@@ -1,11 +1,11 @@
 {
-  "name": "Middle Staking : Swap contract",
+  "name": "Middle Staking : Swap Contract",
   "description": "Liquidity pool for the swap",
   "social": {
     "website": "https://www.middlestaking.fr/",
     "twitter": "MiddleStaking",
     "telegram": "https://t.me/middlestaking"
   },
-  "tags": ["middlestaking", "liquidity", "swap"],
+  "tags": ["middlestaking", "liquidity", "swap", "contract"],
   "icon": "middle"
 }
