Website Link Fix

--- a/accounts/erd1qqqqqqqqqqqqqpgqw7sqzzd7s6a94zngm3ffdv2ypnayqx78jnxsre5uew.json
+++ b/accounts/erd1qqqqqqqqqqqqqpgqw7sqzzd7s6a94zngm3ffdv2ypnayqx78jnxsre5uew.json
@@ -2,7 +2,7 @@
   "name": "ElrondBet",
   "description": "ElrondBet is a fully decentralized profit sharing platform offering a wide range of blockchain games on the MultiversX Blockchain.",
   "social": {
-    "website": "https://https://elrondbet.net/",
+    "website": "https://elrondbet.net",
     "twitter": "https://x.com/token_nuts",
     "email": "contact@nutstoken.net",
     "telegram": "https://t.me/tokennuts"
